feat: add get all customers api

--- a/NorthwindWithDapper/appsettings.json
+++ b/NorthwindWithDapper/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbContext": "Server=localhost,1433;Database=Northwind;TrustServerCertificate=True;MultipleActiveResultSets=true;Trusted_Connection=True"
+    "DefaultConnection": "Server=localhost;Database=Northwind;TrustServerCertificate=True;MultipleActiveResultSets=true;Trusted_Connection=True"
   }
 }
